tests/baselines/reference/generatorReturnExpressionIsChecked.errors.txt
tests/cases/compiler/generatorReturnExpressionIsChecked.ts(2,12): error TS2304: Cannot find name 'invalid'.


==== tests/cases/compiler/generatorReturnExpressionIsChecked.ts (1 errors) ====
    function* f(): Iterator<number> {
        return invalid;
               ~~~~~~~
!!! error TS2304: Cannot find name 'invalid'.
    }
    